added a ghosts page

--- a/static/partials/ghosts.html
+++ b/static/partials/ghosts.html
@@ -1,66 +1,66 @@
 
   <div class="container">
     <div class="row">
-      <div class='col-md-10' ng-controller='piratesController'>
+      <div class='col-md-10' ng-controller='ghostsController'>
           <form class="form-horizontal">
             <div class="form-group">
               <h1>GHOSTS!</h1>
               <label class="control-label col-sm-2">Small Toy:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Small animal" ng-model='newPirate.Animal'>
+                <input type="text" class="form-control" placeholder="Small animal" ng-model='newGhost.Animal'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Type of Food:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name4'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name4'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Favorite Sports Team:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Candy'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Candy'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Name 2:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name2'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name2'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Name 3:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name3'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name3'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Dog's Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter the name of a Dog" ng-model='newPirate.Dog'>
+                <input type="text" class="form-control" placeholder="Enter the name of a Dog" ng-model='newGhost.Dog'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Small Animal:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Small animal" ng-model='newPirate.Animal'>
+                <input type="text" class="form-control" placeholder="Small animal" ng-model='newGhost.Animal'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Another Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name4'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name4'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Favorite Candy:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Candy'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Candy'>
               </div>
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success" ng-click='addPirate()'>Ghosts!</button>
+                <button type="submit" class="btn btn-success" ng-click='addGhost()'>Ghosts!</button>
               </div>
             </div>
           </form>
