added a roadTrip and timeTravel page

--- a/static/partials/roadtrip.html
+++ b/static/partials/roadtrip.html
@@ -1,7 +1,7 @@
 
   <div class="container">
     <div class="row">
-      <div class='col-md-10' ng-controller='piratesController'>
+      <div class='col-md-10' ng-controller='roadTripsController'>
           <form class="form-horizontal">
             <div class="form-group">
               <h1>ROAD TRIP!</h1>
@@ -60,7 +60,7 @@
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success" ng-click='addPirate()'>Travel</button>
+                <button type="submit" class="btn btn-success" ng-click='addRoadTrip()'>Travel</button>
               </div>
             </div>
           </form>
