--- a/static/partials/timeTravel.html
+++ b/static/partials/timeTravel.html
@@ -1,7 +1,7 @@
 
   <div class="container">
     <div class="row">
-      <div class='col-md-10' ng-controller='piratesController'>
+      <div class='col-md-10' ng-controller='timeTravelsController'>
           <form class="form-horizontal">
             <div class="form-group">
               <h1>TIME TRAVEL!</h1>
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success" ng-click='addPirate()'>Let's Go!</button>
+                <button type="submit" class="btn btn-success" ng-click='addTimeTravel()'>Let's Go!</button>
               </div>
             </div>
           </form>
