--- a/static/partials/timeTravel.html
+++ b/static/partials/timeTravel.html
@@ -7,43 +7,49 @@
               <h1>TIME TRAVEL!</h1>
               <label class="control-label col-sm-2">What year is it?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name1'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.CurrentYear'>
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2">What year should you travel to?</label>
+              <label class="control-label col-sm-2">What city do you live in?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name2'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.TravelYear'>
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2">Favorite City:</label>
+              <label class="control-label col-sm-2">What year do you want to travel to?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name3'>
+                <input type="text" class="form-control" placeholder="Enter the year you want to travel to" ng-model='newTimeTravel.TravelYear'>
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2">Dog's Name:</label>
+              <label class="control-label col-sm-2">What do you want to do while you're there?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter the name of a Dog" ng-model='newPirate.Dog'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.Task'>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2">Mode of Transportation:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Enter the name of a Dog" ng-model='newTimeTravel.Dog'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Small Animal:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Small animal" ng-model='newPirate.Animal'>
+                <input type="text" class="form-control" placeholder="Small animal" ng-model='newTimeTravel.Animal'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Another Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name4'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.Name4'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Favorite Candy:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Candy'>
+                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.Candy'>
               </div>
             </div>
             <div class="form-group">
