added more to the story

--- a/static/partials/pirates.html
+++ b/static/partials/pirates.html
@@ -7,19 +7,25 @@
               <h1>PIRATES!</h1>
               <label class="control-label col-sm-2">Name 1:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name1'>
+                <input type="text" class="form-control" placeholder="Enter the name of a friend" ng-model='newPirate.Name1'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Name 2:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name2'>
+                <input type="text" class="form-control" placeholder="Enter the name of a friend" ng-model='newPirate.Name2'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Name 3:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name3'>
+                <input type="text" class="form-control" placeholder="Enter the name of a friend" ng-model='newPirate.Name3'>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2">Earth's best ocean:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Pacific, Indian, Atlantic, etc" ng-model='newPirate.Ocean'>
               </div>
             </div>
             <div class="form-group">
@@ -35,15 +41,15 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2">Another Name:</label>
+              <label class="control-label col-sm-2">Boy's Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Name4'>
+                <input type="text" class="form-control" placeholder="Enter a boy's name" ng-model='newPirate.Name4'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Favorite Candy:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newPirate.Candy'>
+                <input type="text" class="form-control" placeholder="What's your favorite candy?" ng-model='newPirate.Candy'>
               </div>
             </div>
             <div class="form-group">
