--- a/static/partials/ghosts.html
+++ b/static/partials/ghosts.html
@@ -47,15 +47,15 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="control-label col-sm-2">Another Name:</label>
+              <label class="control-label col-sm-2">Boy's Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name4'>
+                <input type="text" class="form-control" placeholder="Enter a boy's name" ng-model='newGhost.Name4'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">Favorite Candy:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Candy'>
+                <input type="text" class="form-control" placeholder="Your favorite candy!" ng-model='newGhost.Candy'>
               </div>
             </div>
             <div class="form-group">
