added the ghost story

--- a/static/partials/ghostStory.html
+++ b/static/partials/ghostStory.html
@@ -3,8 +3,8 @@
       	<div class='col-md-8'>
 	    	<div class="row">
             	<p ng-repeat="ghost in ghosts" class="animated infinite pulse" style="font-family: 'Alegreya SC', serif; font-size: 25px;">
-				Two kid ghosts, {{ ghost.Name1 }} and {{ ghost.Name2 }}, were up one night in their room talking about who could be more scary than the other.  {{ ghost.Name2 }} laughed and then flew through his bedroom wall and dissapeared.  All of a sudden, {{ ghost.Name1 }} heard a loud sound that went, {{ ghost.sound }}!! {{ ghost.Name1 }} turned to {{ ghost.Name2 }} and removed his {{ ghost.Bodypart1 }} and put it on his {{ ghost.Bodypart2 }}.
-            	</p>
+				Two kid ghosts, {{ ghost.Name1 }} and {{ ghost.Name2 }}, were up late one night in their room talking about who could be more scary than the other.  {{ ghost.Name2 }} laughed and then flew through his bedroom wall and dissapeared to leave {{ ghost.Name1 }} all alone.  All of a sudden, {{ ghost.Name1 }} heard a loud sound that went, {{ ghost.Sound1 }}!! {{ ghost.Name2 }} came flying out of the wall and flew around the room yelling out, {{ ghost.Sound1 }}!! {{ ghost.Sound1 }}!! {{ ghost.Sound1 }}!! {{ ghost.Name1 }} laughed and then turned to {{ ghost.Name2 }} and removed his {{ ghost.Bodypart1 }} and put it on his {{ ghost.Bodypart2 }}.  Both little ghosts laughed.  As they were laughing, the candle in their room blew out and it became very dark.  All of a sudden, they heard, 
+            	{{ ghost.Sound2 }}!!!! and momma ghost flew in and yelled "I'm the scariest!  Now go to sleep!"</p>
             	<a href="#/"><i class="fa fa-backward fa-5x" aria-hidden="true"></i></a>
             </div>
 		</div>
