--- a/static/partials/ghosts.html
+++ b/static/partials/ghosts.html
@@ -1,68 +1,51 @@
 
-  <div class="container">
-    <div class="row">
-      <div class='col-md-10' ng-controller='ghostsController'>
-          <form class="form-horizontal">
-            <div class="form-group">
-              <h1>GHOSTS!</h1>
-              <label class="control-label col-sm-2">Small Toy:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Small animal" ng-model='newGhost.Animal'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Type of Food:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name4'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Favorite Sports Team:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Candy'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Name 2:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name2'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Name 3:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newGhost.Name3'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Dog's Name:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter the name of a Dog" ng-model='newGhost.Dog'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Small Animal:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Small animal" ng-model='newGhost.Animal'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Boy's Name:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter a boy's name" ng-model='newGhost.Name4'>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2">Favorite Candy:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Your favorite candy!" ng-model='newGhost.Candy'>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-success" ng-click='addGhost()'>Ghosts!</button>
-              </div>
-            </div>
-          </form>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class='col-md-10' ng-controller='ghostsController'>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <h1>GHOSTS!</h1>
+          <label class="control-label col-sm-2">Little Ghost Boy's Name:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Enter a boy's name" ng-model='newGhost.Name1'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Another Ghost Boy's Name:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Enter a boy's name" ng-model='newGhost.Name2'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">A very loud sound:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Bang!, Boom!, etc." ng-model='newGhost.Sound1'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Another very loud sound:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Boom!, Bang!, etc." ng-model='newGhost.Sound2'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Body Part:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Enter the name of a body part" ng-model='newGhost.Bodypart1'>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-sm-2">Another Body Part:</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="Enter the name of another body part" ng-model='newGhost.Bodypart2'>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-success" ng-click='addGhost()'>Ghosts!</button>
+          </div>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
