--- a/static/partials/timeTravel.html
+++ b/static/partials/timeTravel.html
@@ -7,13 +7,19 @@
               <h1>TIME TRAVEL!</h1>
               <label class="control-label col-sm-2">What year is it?</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Enter name of someone around you" ng-model='newTimeTravel.CurrentYear'>
+                <input type="text" class="form-control" placeholder="" ng-model='newTimeTravel.CurrentYear'>
               </div>
             </div>
             <div class="form-group">
               <label class="control-label col-sm-2">What year do you want to travel to?</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" placeholder="Enter the year you want to travel to" ng-model='newTimeTravel.TravelYear'>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="control-label col-sm-2">Period</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Enter the year you want to travel to" ng-model='newTimeTravel.Period'>
               </div>
             </div>
             <div class="form-group">
